# MoodLens

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: best.pt
models/cnn_small/: best.pt  metrics.csv  model_cnn.pt  summary.txt
models/compare/: summary.txt
models/resnet18/: metrics.csv  summary.txt
models/test_results/: test_test_private_results.csv
paper_assets/: details_template.md  predictions_private_cnn_small.csv  predictions_private_probs_cnn_small.npz  predictions_private_probs_resnet18.npz  predictions_private_resnet18.csv  table1_private_per_class_accuracy_cnn_small.csv  table1_private_per_class_accuracy_resnet18.csv  table2_ablation.csv
src/: main.py
src/data/: fer2013.py  plot_distribution_class.py  prepare_fer2013.py
src/models/: CNN_class.py  ResNetClass.py  factory.py
src/realtime/: HaarDetector.py  app.py  run_webcam.py
src/test/: emotion_box.py  eval_test.py  gen.py  test.py
src/train/: TrainConfig.py  __init__.py  config.py  estimate_train.py  eta_probe.py  metrics.py  train.py  train_config.py  train_loop.py
src/utils/: io.py  seed.py  time_measure.py  viz.py
